 * Fix syntax error in POD documentation (debian) Ansgar Burchardt <ansgar@43-1.org>
 * Fix spelling errors (debian) Ansgar Burchardt <ansgar@43-1.org>
 * adColumn $distinct_flag not handled (RT#6248 & RT#6251) John D. Lima
 * writing fields containing 0 with AnyData::Format::Fixed (RT#8671) <elodie+cpan [...] pasteur.fr>

version 0.10, released 19 April 2004

 * really fixed adConvert, thanks for bug reports - Dan Wright, Scott Godin

version 0.09, released 18 April 2004

 * fixed adConvert - many thanks to Dan Wright for a patch

version 0.08, released 25 October 2003
 
 * Storage/RAM.pm : added version number

version 0.07, released 25 October 2003
 
 * Storage/PassThru.pm : added version number (thanks Randal Schwartz)

version 0.06, released 25 October 2003

 * test.pl : omitted XML & HTMLtable tests

version 0.05, released 17 July, 2001

 There are major changes in the way the tied hash interface
 does deletions and exporting and in the XML and Weblog format
 parsers.  If you use the tied hash interface or XML or Weblog
 (in either interface), please update to this version.

 The Big Stuff:

   * XML now accepts user-supplied tag-to-column mappings.

   * Import now supports cross and outer joins by importing more than
     one table into the same in-memory table.

 Many minor fixes:

 * fixed adExport to allow flags as documented
   (thx Matthew Wickline)

 * greatly improved and speeded up deletions from tied hashes
   and documented how they work (thx *alot* Matthew Wickline)

 * fixed weblog to handle embedded double quotes
   (thx Bob O'Neill)

 * added documentation to DBD::AnyData on cross joins and full
   outer joins as part of the import statement

 * fixed tests so they skip XML and HTMLtable if the
   required extra modules (e.g. XML::Twig) aren't available
   (thx Malcolm Cook)

 * fixed XML to be able to work with XML::Twig 3.00 as well
   as earlier versions (meant to do that earlier)

 * fixed README to mention that DBD::AnyData replaces