@@ -11,6 +11,8 @@ version 0.11, released  Aug 2012
  * Fix spelling errors (debian) Ansgar Burchardt <ansgar@43-1.org>
  * adColumn $distinct_flag not handled (RT#6248 & RT#6251) John D. Lima
  * writing fields containing 0 with AnyData::Format::Fixed (RT#8671) <elodie+cpan [...] pasteur.fr>
+ * weblog request and referer regexs were too greedy, and the referer and client regex's where in the wrong order (RT#34063) and (RT#72334) Wes Brown <wes [...] smellycat.com> and pawal [...] blipp.com
+ * 
 
 version 0.10, released 19 April 2004
 
